--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </table>
     <hr>
 
-    <a href="Admission form.html">My hobby</a>
+    <a href="Admission form.html">Admission form</a>
     <a href="My contact.html">My contact details</a>
     <h3>Skill</h3>
     <table>
