--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <hr>
 
     <a href="Admission form.html">Admission form</a>
+    <p></p>
+    <a href="index.blade.html">Index</a>
     <a href="My contact.html">My contact details</a>
     <h3>Skill</h3>
     <table>
