--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
 <head>
@@ -13,17 +13,17 @@
       <td>
         <h1> Ashish Maurya</h1>
         <p><em> I am <strong><a href="https://twitter.com/AshishK58020124">Ashish Kumar Maurya</a></strong></em></p>
-        <p> I ❤ food and singing a song</p>
+        <p> I ❤ reading and playing</p>
       </td>
     </tr>
   </table>
 
 
   <hr>
-  <h3>Book and Teaching</h3>
+  <h3>ABOUT ME</h3>
   <ul>
-    <li>ram is a boy </li>
-    <li>shyam is a bad boy</li>
+    <li>I am Ashish Kumar Maurya from Ghazipur.</li>
+    <p> <h2>I am a engineering student.and i live in lucknow in this time </h2></p>
     <h1>my qualifications</h1>
     <table border="1">
       <thead>
