--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ d<!DOCTYPE html>
   <h3>ABOUT ME</h3>
   <ul>
     <li>I am Ashish Kumar Maurya from Ghazipur.</li>
-    <p> <h2>I am a engineering student.and i live in lucknow in this time </h2></p>
+    <p>My name's Ashish Kumar Maurya I'm from Uttar Pradesh district, Ghazipur. I'm 20 years old.
+I have done my schooling 10th and 12th in Ghazipur from UP Board. I am persuing B.Tech in Lucknow.
+     </p>
     <h1>my qualifications</h1>
     <table border="1">
       <thead>
