--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ d<!DOCTYPE html>
     <li>I am Ashish Kumar Maurya from Ghazipur.</li>
     <p>My name's Ashish Kumar Maurya I'm from Uttar Pradesh district, Ghazipur. I'm 20 years old.
 I have done my schooling 10th and 12th in Ghazipur from UP Board. I am persuing B.Tech in Lucknow.
+      Coming to my faimily background my father is a farmer and my mother is a housemaker.
+      My brother is a Gov. teacher.
+      My hobbies are listening to music,playing games and spending time with friends.
      </p>
     <h1>my qualifications</h1>
     <table border="1">
