--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@ d<!DOCTYPE html>
   <hr>
   <h3>ABOUT ME</h3>
   <ul>
-    <li>I am Ashish Kumar Maurya from Ghazipur.</li>
-    <p>My name's Ashish Kumar Maurya I'm from Uttar Pradesh district, Ghazipur. I'm 20 years old.
-I have done my schooling 10th and 12th in Ghazipur from UP Board. I am persuing B.Tech in Lucknow.
-      Coming to my faimily background my father is a farmer and my mother is a housemaker.
-      My brother is a Gov. teacher.
-      My hobbies are listening to music,playing games and spending time with friends.
+    <p>My name is Ashish Kumar Maurya. I am from Ghazipur. I graduated from Seth Vishambhar Nath Institute of Technology which is affiliated by AKTU.
+      I have bachelor degree in Computer Science and Engineering. 
+      I have completed my 10th and 12th from UP board. I secured 75% in 12th and 75.3%in 10th. I did my internship from Bala ji infotech Ltd.Pvt.
+
+My technical skills C, C++ Python, HTML and CSS.
+
+My short-term goal is get a job in growth oriented company where I can enhance my skill and knowledge.
+
+My long-term goal is to get knowledge and experience so that I get a higher position in the company and also become successful in life.
+
+My hobbies are learning new things, reading books and travelling and  music,playing games and spending time with friends.
      </p>
     <h1>my qualifications</h1>
     <table border="1">
