--- a/index.html
+++ b/index.html
@@ -26,30 +26,35 @@ d<!DOCTYPE html>
       I have bachelor degree in Computer Science and Engineering. 
       I have completed my 10th and 12th from UP board. I secured 75% in 12th and 75.3%in 10th. I did my internship from Bala ji infotech Ltd.Pvt.
 
-My technical skills C, C++ Python, HTML and CSS.
+<p>My technical skills C, C++ Python, HTML and CSS.</p>
 
-My short-term goal is get a job in growth oriented company where I can enhance my skill and knowledge.
+<p>My short-term goal is get a job in growth oriented company where I can enhance my skill and knowledge.
 
-My long-term goal is to get knowledge and experience so that I get a higher position in the company and also become successful in life.
+My long-term goal is to get knowledge and experience so that I get a higher position in the company and also become successful in life.</p>
 
-My hobbies are learning new things, reading books and travelling and  music,playing games and spending time with friends.
+<p>My hobbies are learning new things, reading books and travelling and  music,playing games and spending time with friends.</p>
+    <hr>
      </p>
-    <h1>my qualifications</h1>
+    <h1>MY Qualifications</h1>
     <table border="1">
       <thead>
         <tr>
           <th>Year</th>
           <th>Qualifiacation</th>
+          <th>Percent</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>2013</td>
           <td>High School</td>
+          <td>75.33%</td>
+         
         </tr>
         <tr>
           <td>2015</td>
           <td>Intermideate</td>
+          <td>75.55</td>
         </tr>
 
       </tbody>
