--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       I have bachelor degree in Computer Science and Engineering. 
       I have completed my 10th and 12th from UP board. I secured 75% in 12th and 75.3%in 10th. I did my internship from Bala ji infotech Ltd.Pvt.
 
-<p>My technical skills C, C++ Python, HTML and CSS.</p>
+<p>My technical skills C, C++ Python, HTML and CSS,Complete Java</p>
 
 <p>My short-term goal is get a job in growth oriented company where I can enhance my skill and knowledge.
 
