--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
   <hr>
   <h3>ABOUT ME</h3>
   <ul>
+     <table cellspacing="20">
+    <tr>
+      <td><img src="ash.jpeg" alt="ashish profile picture"></td>
+      <td>
     <p>My name is Ashish Kumar Maurya. I am from Ghazipur. I graduated from Seth Vishambhar Nath Institute of Technology which is affiliated by AKTU.
       I have bachelor degree in Computer Science and Engineering. 
       I have completed my 10th and 12th from UP board. I secured 75% in 12th and 75.3%in 10th. I did my internship from Bala ji infotech Ltd.Pvt.
@@ -33,8 +37,11 @@
 My long-term goal is to get knowledge and experience so that I get a higher position in the company and also become successful in life.</p>
 
 <p>My hobbies are learning new things, reading books and travelling and  music,playing games and spending time with friends.</p>
-    <hr>
+    </td>
+    </tr>
+         </table>
      </p>
+    <hr>
     <h1>MY Qualifications</h1>
     <table border="1">
       <thead>
