--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>❤Ashish Kumar Maurya Personal site</title>
 </head>
 
-<body>
+<body style="background-color: #D4DFAA"
   <table cellspacing="20">
     <tr>
       <td><img src="ash.png" alt="ashish profile picture"></td>
@@ -24,7 +24,6 @@
   <ul>
      <table cellspacing="20">
     <tr>
-      <td><img src="ash.jpeg" alt="ashish profile picture"></td>
       <td>
     <p>My name is Ashish Kumar Maurya. I am from Ghazipur. I graduated from Seth Vishambhar Nath Institute of Technology which is affiliated by AKTU.
       I have bachelor degree in Computer Science and Engineering. 
@@ -37,6 +36,7 @@
 My long-term goal is to get knowledge and experience so that I get a higher position in the company and also become successful in life.</p>
 
 <p>My hobbies are learning new things, reading books and travelling and  music,playing games and spending time with friends.</p>
+         <td><img src="ash.jpeg" alt="ashish profile picture"></td>
     </td>
     </tr>
          </table>
