--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>❤Ashish Kumar Maurya Personal site</title>
 </head>
 
-<body style="background-color: #D4DFAA">
+<body>
   <table cellspacing="20">
     <tr>
       <td><img src="ash.png" alt="ashish profile picture"></td>
