--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="ash.png" alt="ashish profile picture"></td>
+      <td><img src="ash.png" width="200" height="200" border="2" alt="ashish profile picture"></td>
       <td>
         <h1> Ashish Maurya</h1>
         <p><em> I am <strong><a href="https://twitter.com/AshishK58020124">Ashish Kumar Maurya</a></strong></em></p>
