--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@ My long-term goal is to get knowledge and experience so that I get a higher posi
          </table>
      </p>
     <hr>
+ <div class="row">
+            <div class="col-sm-12">
+                <h1 style="padding-left: 20px;text-align: center;font-family: 'Times New Roman';font-size: 40px;color: #761c19">Welcome in SVNIET</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="col-sm-4" style="margin-top: 20px;">
+                    <img src="svn.jpeg" id="img1" class="img-rounded" style="height: 300px;width: 100%;"></img>
+                </div>
+                <div class="col-sm-6" style="padding-top: 40px;">
+                    <p>SVN has emerged as a centre of excellence of higher education in Uttar Pradesh.
+                        This college has started carving a position for itself in the education domain and is rising as a shining
+                        star on the horizon of quality education. SVN has a multi-disciplinary approach and offers courses in various
+                        streams encompassing Engineering, Management, Pharmacy, Polytechnic and Diploma in Elementary Education.
+                    </p>
+                    <p>The prime objective of SVN is to provide a world class learning environment to roll out efficient
+                        human resources for the needs of industries, in which faculty, staff and students can discover,
+                        examine critically preserve and transmit the knowledge,wisdom and values that will ensure the survival
+                        of future generations and improve the quality of life for all.
+                    </p>
+                </div>
+                <div class="col-sm-2"></div>
+            </div>
+        </div>
+<hr>
     <h1>MY Qualifications</h1>
     <table border="1">
       <thead>
