--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ My long-term goal is to get knowledge and experience so that I get a higher posi
     <hr>
  <div class="row">
             <div class="col-sm-12">
-                <h1 style="padding-left: 20px;text-align: center;font-family: 'Times New Roman';font-size: 40px;color: #761c19">Welcome in SVNIET</h1>
+                <h1 style="padding-left: 20px;text-align: center;font-family: 'Times New Roman';font-size: 40px;color: #761c19">Welcome</h1>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
                 <div class="col-sm-4" style="margin-top: 20px;">
-                    <img src="svn.jpeg" id="img1" class="img-rounded" style="height: 300px;width: 100%;"></img>
+                    <img src="collf2.jpeg" id="img1" class="img-rounded" style="height: 300px;width: 100%;"></img>
                 </div>
                 <div class="col-sm-6" style="padding-top: 40px;">
                     <p>SVN has emerged as a centre of excellence of higher education in Uttar Pradesh.
