--- a/My contact.html
+++ b/My contact.html
@@ -2,29 +2,56 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>contact me</title>
+<meta charset="utf-8">
+<title>Company Details</title>
 </head>
 
 <body>
-  <h1>My contact details</h1>
-  <p>Raipur Baghpur post kelhi ghazipur</p>
-  <p>8787203177,7617826359</p>
-  <p>ashishkumarmaurya17@gmail.com</p>
-  <hr>
-  <form class="" action="mailto:bhim03133@gmail.com" method="post" enctype="text/plain">
-    <label>Your Name:</label>
-    <input type="text" name="Your Name" value=""><br>
-      <label>Your email</label>
-    <input type="email" name="Your email" value=""><br>
-      <input type="file"><br>
-    <input type="date"><br>
-    <label>Your massage</label><br>
-    <textarea name="Your comment" rows="8" cols="80"></textarea><br>
-    <label>Do you want to sign up to the email list?</label>
-    <input type="checkbox" name="" value="">
-      <input type="submit" name=""><br>
-  </form>
+<table border="5px">
+<tr>
+<th>S.N.</th>
+<th>Company Name</th>
+<th>Model</th>
+<th>Price</th>
+</tr>
+<tr>
+<td>1.</td>
+<td>Mahendra</td>
+<td>Beloro</td>
+<td>7,00000</td>
+</tr>
+<tr>
+<td>1.</td>
+<td>Maruti</td>
+<td>Baleno</td>
+<td>9,00000</td>
+</tr>
+<tr>
+<td>1.</td>
+<td>Tata</td>
+<td>Nexon</td>
+<td>12,00000</td>
+</tr>
+<tr>
+<td>1.</td>
+<td>BMW</td>
+<td>X5</td>
+<td>60,00000</td>
+</tr>
+<tr>
+<td>1.</td>
+<td>Audi</td>
+<td>A6</td>
+<td>59,00000</td>
+</tr>
+<tr>
+<td>1.</td>
+<td>Mahendra</td>
+<td>Thar</td>
+<td>14,00000</td>
+</tr>
+
+</table>
 </body>
 
 </html>
